Add NS Query log

--- a/logstash-syslog.conf
+++ b/logstash-syslog.conf
@@ -9,11 +9,34 @@ filter {
     if [type] == "syslog" {
         grok {
             match => {
+                "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message} %{IPV4:SrcIP}(:%{INT:SrcPort})? -> %{IPV4:DstIP}(:%{INT:DstPort})?"
+            }
+        }
+        grok {
+            match => {
+                "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message} %{IPV6:SrcIPv6}(:%{INT:SrcPort})? -> %{IPV6:DstIPv6}(:%{INT:DstPort})?"
+            }
+        }
+        grok {
+            match => {
                 "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message}"
             }
         }
-        date {
-             match => ["syslog_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss"]
+        geoip {
+            source => "[SrcIP]"
+            target => "SrcGro"
+        }
+        geoip {
+            source => "[DstIP]"
+            target => "DstGro"
+        }
+        geoip {
+            source => "[SrcIPv6]"
+            target => "SrcGroIPv6"
+        }
+        geoip {
+            source => "[DstIPv6]"
+            target => "DstGroIPv6"
         }
     }
 
