--- a/logstash-syslog.conf
+++ b/logstash-syslog.conf
@@ -39,6 +39,10 @@ filter {
             target => "DstGroIPv6"
         }
     }
+    date {
+        match => ["syslog_timestamp"]
+
+    }
 
 }
 output {
