--- a/logstash-syslog.conf
+++ b/logstash-syslog.conf
@@ -39,7 +39,8 @@ filter {
             target => "DstGroIPv6"
         }
         date {
-            match => ["syslog_timestamp"]
+            match => ["syslog_timestamp", "yyyy-MM-dd'T'HH:mm:ss'.'SSSZ"]
+            target => "@timestamp"
 
         }
     }
