--- a/logstash-syslog.conf
+++ b/logstash-syslog.conf
@@ -39,8 +39,9 @@ filter {
             target => "DstGroIPv6"
         }
         date {
-            match => ["syslog_timestamp", "yyyy-MM-dd'T'HH:mm:ss'.'SSSZ"]
-            target => "@timestamp"
+            match => ["syslog_timestamp", "MMM d HH:mm:ss", "MMM dd HH:mm:ss", "ISO8601" ]
+            timezone => "Asia/Tokyo"
+            locale => "jp"
 
         }
     }
