--- a/logstash-syslog.conf
+++ b/logstash-syslog.conf
@@ -39,7 +39,7 @@ filter {
             target => "DstGroIPv6"
         }
         date {
-            match => ["syslog_timestamp" => ["MMM  d HH:mm:ss", "MMM dd HH:mm:ss", "ISO8601"]
+            match => {"syslog_timestamp" => ["MMM  d HH:mm:ss", "MMM dd HH:mm:ss", "ISO8601"]}
             target => "@timestamp"
             add_tag => ["tmatch"]
         }
