Add NS Query Log

--- a/logstash-syslog.conf
+++ b/logstash-syslog.conf
@@ -19,6 +19,11 @@ filter {
         }
         grok {
             match => {
+                "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{MONTHDAY:monthday}\-%{MONTH:month}\-%{YEAR:year} %{TIME:q_time} %{WORD:queries}\: %{WORD:info}\: %{WORD:client} %{IP:clientip}\#%{NUMBER:port} \(%{USERNAME:domain}\)\: %{WORD:view} %{WORD:external}\: %{WORD:query}\: %{USERNAME:domain_02} %{WORD:in} %{WORD:any} %{GREEDYDATA:lank} \(%{IP:ip_add}\)"
+            }
+        }
+        grok {
+            match => {
                 "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{GREEDYDATA:syslog_message}"
             }
         }
