Add NS Query Log fix

--- a/logstash-syslog.conf
+++ b/logstash-syslog.conf
@@ -19,7 +19,7 @@ filter {
         }
         grok {
             match => {
-                "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{MONTHDAY:monthday}\-%{MONTH:month}\-%{YEAR:year} %{TIME:q_time} %{WORD:queries}\: %{WORD:info}\: %{WORD:client} %{IP:clientip}\#%{NUMBER:port} \(%{USERNAME:domain}\)\: %{WORD:view} %{WORD:external}\: %{WORD:query}\: %{USERNAME:domain_02} %{WORD:in} %{WORD:any} %{GREEDYDATA:lank} \(%{IP:ip_add}\)"
+                "message" => "%{SYSLOGTIMESTAMP:syslog_timestamp} %{SYSLOGHOST:syslog_hostname} %{DATA:syslog_program}(?:\[%{POSINT:syslog_pid}\])?: %{MONTHDAY:monthday}\-%{MONTH:month}\-%{YEAR:year} %{TIME:q_time} %{WORD:queries}\: %{WORD:info}\: %{WORD:client} @%{WORD:id_word} %{IP:clientip}\#%{NUMBER:port} \(%{USERNAME:domain}\)\: %{WORD:view} %{WORD:external}\: %{WORD:query}\: %{USERNAME:domain_02} %{WORD:in} %{WORD:any} %{GREEDYDATA:lank} \(%{IP:ip_add}\)"
             }
         }
         grok {
@@ -42,6 +42,10 @@ filter {
         geoip {
             source => "[DstIPv6]"
             target => "DstGroIPv6"
+        }
+        groip {
+            source => "[clientip]"
+            target => "ClientIP"
         }
         date {
             match => ["syslog_timestamp", "MMM  d HH:mm:ss", "MMM dd HH:mm:ss", "ISO8601"]
