Add NS Query Log fix3

--- a/logstash-syslog.conf
+++ b/logstash-syslog.conf
@@ -43,7 +43,7 @@ filter {
             source => "[DstIPv6]"
             target => "DstGroIPv6"
         }
-        groip {
+        geoip {
             source => "[clientip]"
             target => "ClientIP"
         }
